# serverless-rs

./: Cargo.toml  README.md
migrations/2018-05-20-040013_create_lambdas/: down.sql  up.sql
src/: db.rs  functions.rs  headers.rs  main.rs  models.rs  request.rs  response.rs  schema.rs  traits.rs
